--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ section {
     font-size: clamp(1.2em,3.5vw,3em);
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -66,15 +70,30 @@ section.normal {
 section.imagem {
     background-color: rgba(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 5px 13px 0px rgba(0, 0, 0, 0.500);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.500);
     width: 400px;
     padding: 5px;
+    text-shadow: 1px 1px 0px black;
 }
 
+section#img01 {
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    
+}
+
+section#img02 {
+    background-image: url(imagens/background002.jpg);
+    background-position: right center;
+    
+}
 
 footer {
     background-color: black;
