--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@
 
 html, body {
     background-color: azure;
-    min-height: 80vh;
-    margin: 0px;
+    min-height: 100vh;
+
     font-family: var(--fonte1);
 }
 
@@ -81,7 +81,7 @@ section.imagem {
 section.imagem > p {
     display: inline-block;
     background-color: rgba(0, 0, 0, 0.500);
-    width: 400px;
+    width: 50%;
     padding: 5px;
     text-shadow: 1px 1px 0px black;
 }
