--- a/style.css
+++ b/style.css
@@ -81,7 +81,8 @@ section.imagem {
 section.imagem > p {
     display: inline-block;
     background-color: rgba(0, 0, 0, 0.500);
-    width: 50%;
+    width: 400px;
+    min-width: 300px;
     padding: 5px;
     text-shadow: 1px 1px 0px black;
 }
